kubernetes/50-todo-backend/base/todo-actor-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-actor
  namespace: todo-backend
  labels:
    app: actor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actor
  template:
    metadata:
      labels:
        app: actor
    spec:
      containers:
        - name: wasmcloud
          image: eu.gcr.io/wasmcloud-k8s-demo/wasmcloud:0.18.2-debug
          imagePullPolicy: Always
          args: ["--manifest=/etc/manifest/manifest.yaml"]
          volumeMounts:
            - name: manifest
              mountPath: "/etc/manifest"
              readOnly: true
      volumes:
        - name: manifest
          configMap:
            name: manifest-actor
